--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -94,7 +94,7 @@
                                    </a>
                                </li>
                                <li>
-                                  <a href="#">
+                                  <a href="/blog/">
                                       <i class="icon-tags icon-large"></i> Blog
                                   </a>
                               </li>
