--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -33,7 +33,7 @@
 
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">  {% if user.is_authenticated %}
-                      Bienvenido apreciado médico {{user.first_name}}
+                      Bienvenido apreciado médico
                       {% else %}
                       {% endif %}
                                         <b class="caret hidden-phone"></b>
@@ -64,7 +64,7 @@
                         <div class="container">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="/home/">
                                         <i class="icon-user-md icon-large"></i> Perfil
                                     </a>
                                 </li>
@@ -107,22 +107,10 @@
                         </div>
                     </div>
 
-
-        <section class="nav nav-page">
-        <div class="container">
-            <div class="row">
-                <div class="span7">
-                </div>
-                <div class="page-nav-options">
-
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="page container">
-       {% block content %}
+  {% block content %}
 
-        {% endblock content %}
+  {% endblock content %}
     </section>
 
 
