--- a/templates/pacientes/index.html
+++ b/templates/pacientes/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{{STATIC_URL}}pacientes/font-awesome/css/font-awesome.min.css">
     <!-- Page Specific CSS -->
     <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
+    <link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
   </head>
 
   <body>
@@ -44,8 +45,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Perfil <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                  <li><a href="#"><i class="fa fa-user-md"></i> Básico</a></li>
-                  <li><a href="#"><i class="fa fa-ambulance"></i> Emergencia</a></li>
+                  <li><a href="/paciente/perfilbasico/"><i class="fa fa-user-md"></i> Básico</a></li>
+                  <li><a href="/paciente/perfilbasico/contacto"><i class="fa fa-ambulance"></i> Emergencia</a></li>
               </ul>
             </li>
             <li class="dropdown">
