--- a/templates/pacientes/perfil_basico_contacto_form.html
+++ b/templates/pacientes/perfil_basico_contacto_form.html
@@ -18,21 +18,20 @@ Perfil - Básico
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="/paciente/perfilbasico/">Informació personal</a>
+                                <li><a href="/paciente/perfilbasico/">Informació personal</a>
                                 </li>
-                                <li><a href="/paciente/perfilbasico/contacto">Información de contacto</a>
+                                <li class="active"><a href="/paciente/perfilbasico/contacto">Información de contacto</a>
                                 </li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
                     </div>
                 </div>
-
 <div class="row">
   <div class="col-lg-4">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Información Personal</h3>
+                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Información de contacto</h3>
                             </div>
                             <div class="panel-body">
                                  <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
