--- a/templates/pacientes/mis_sintomas_confirmar_delete_form.html
+++ b/templates/pacientes/mis_sintomas_confirmar_delete_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Ingresar Síntomas
+Diario Médico - Eliminar Síntomas
 {% endblock %}
 
 {% block content %}
@@ -25,20 +25,30 @@ Diario Médico - Ingresar Síntomas
                                 <h3 class="panel-title"><i class="fa fa-user-md"></i> Mis Síntomas</h3>
                                 
                             </div>
-                            <div class="panel-body">	
-                            <div class="col-lg-4">
-                    <div class="well well-sm">
-                    <div class="alert alert-info">
-                        <h5><label>Selecciona un síntoma de la lista: </label></h5></div>
-                                     <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
-              {{ form }}
-              <button type="submit" class="btn btn-info btn-circle"><i class="fa fa-check"></i>
+                            <div class="panel-body">
+            <div class="col-lg-6">
+              <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Mis síntomas actuales
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                         
+                               <h5><label>¿Está seguro de que quiere eliminar este síntoma?</label></h5>
+                    <p></p>
+ <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+              
+                 <button type="submit" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-times"></i>
                             </button>
-              <p></p>
+                    
               </form>
+ <p></p>
+   <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-circle btn-lg"><i class="fa fa-list"></i>
+                            </button></a><p></p>
+                        </div>
+                        <!-- /.panel-body -->
                     </div>
-                </div>
-                
+            </div>
                
   </div>
                                
