--- a/templates/pacientes/index.html
+++ b/templates/pacientes/index.html
@@ -107,12 +107,12 @@
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                    
+                
                         <li>
                             <a href="#"><i class="fa fa-home fa-fw"></i> Actividad</a>
                         </li>
                          <li>
-                            <a href="{% url 'perfil_basico_paciente' %}"><i class="fa fa-user fa-fw"></i> Mi perfil</a>
+                            <a href="{% url 'perfil_principal_paciente' %}"><i class="fa fa-user fa-fw"></i> Mi perfil</a>
                         </li>
                                 
                         <li>
@@ -146,7 +146,7 @@
             <div class="container">
                 <h4> Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014</h4>
                 <div class="disclaimer">
-                    <label> © Tech Mobile Software 2010 |</label>
+                    <label> © Tech Mobile Software 2014 |</label>
                     <label>Términos de uso |</label>
                     <label>Políticas de privacidad |</label>
                     <label>Condiciones de servicio |</label>
