--- a/templates/pacientes/medicionesclinicas/hemoglobina/mis_mediciones_clinicas_hemoglobina_form.html
+++ b/templates/pacientes/medicionesclinicas/hemoglobina/mis_mediciones_clinicas_hemoglobina_form.html
@@ -6,26 +6,12 @@ Diario Médico - Ingresar Hemoglobina
 
 {% block content %}
 <br>
-<h1 class="page-header">Mi Diario Médico</h1>
-<p>
-<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
-<a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
-<a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
-<a href="{% url 'listar_medicamento_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
-<a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
-</p>
+{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                    <a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Peso</button></a>
-                    <a href="{% url 'listar_talla_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Talla</button></a>
-                    <a href="{% url 'listar_hemoglobina_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Hemoglobina Glicosilada</button></a>
-                    <a href="{% url 'listar_colesterol_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Colesterol & Triglicéridos</button></a>
-                    <a href="{% url 'listar_presion_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Presión Arterial</button></a>
-                    <a href="{% url 'listar_gluco_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> GlucoDay</button></a>
+                   {% include 'pacientes/menu_diario_medico_mediciones.html' %}
                             </div>
                                  <div class="panel-heading">
                                 
