--- a/templates/pacientes/resultados_examenes/mis_resultados_examenes_confirmar_delete_form.html
+++ b/templates/pacientes/resultados_examenes/mis_resultados_examenes_confirmar_delete_form.html
@@ -6,16 +6,7 @@ Diario Médico - Eliminar Resultados de Exámenes
 
 {% block content %}
 <br>
-<h1 class="page-header">Mi Diario Médico</h1>
-<p>
-<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
-<a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
-<a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
-<a href="{% url 'listar_medicamento_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
-<a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
-</p>
+{% include 'pacientes/menu_diario_medico.html' %}
 
 <div class="row">
   <div class="col-lg-12">
